--- a/res/layout/activity_baidu_map.xml
+++ b/res/layout/activity_baidu_map.xml
@@ -5,12 +5,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <com.baidu.mapapi.map.MapView  
+	    android:id="@+id/abm_view_baidu_map"
+	    android:layout_width="match_parent"  
+	    android:layout_height="match_parent"  
+	    android:clickable="true" />
 
 </RelativeLayout>
